* Refactor: nuevos archivos jugador.py y disparo.py (el fichero clases.py ha sido dividido para tener un fichero por clase) * Modificado .gitignore para que ignore archivos "Thumbs.db" y la carpeta ".idea" (configuración local de PyCharm)

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Imágenes en miniatura creadas por Windows
+Thumbs.db
+
+# Configuración local de PyCharm
+.idea/
